WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
161092
[MediaStream] Templatize MediaConstraint
https://bugs.webkit.org/show_bug.cgi?id=161092
Summary
[MediaStream] Templatize MediaConstraint
Eric Carlson
Reported
2016-08-23 10:38:43 PDT
Templatize MediaConstraint
Attachments
Proposed patch.
(15.60 KB, patch)
2016-08-23 10:42 PDT
,
Eric Carlson
jer.noble
: review+
jer.noble
: commit-queue+
Details
Formatted Diff
Diff
Patch for landing.
(15.59 KB, patch)
2016-08-23 11:13 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2016-08-23 10:42:49 PDT
Created
attachment 286731
[details]
Proposed patch.
WebKit Commit Bot
Comment 2
2016-08-23 10:50:33 PDT
Attachment 286731
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/mediastream/MediaConstraints.h:96: This { should be at the end of the previous line [whitespace/braces] [4] ERROR: Source/WebCore/platform/mediastream/MediaConstraints.h:105: This { should be at the end of the previous line [whitespace/braces] [4] ERROR: Source/WebCore/platform/mediastream/MediaConstraints.h:114: This { should be at the end of the previous line [whitespace/braces] [4] ERROR: Source/WebCore/platform/mediastream/MediaConstraints.h:123: This { should be at the end of the previous line [whitespace/braces] [4] Total errors found: 4 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Eric Carlson
Comment 3
2016-08-23 11:13:16 PDT
Created
attachment 286744
[details]
Patch for landing.
WebKit Commit Bot
Comment 4
2016-08-23 12:04:31 PDT
Comment on
attachment 286744
[details]
Patch for landing. Clearing flags on attachment: 286744 Committed
r204847
: <
http://trac.webkit.org/changeset/204847
>
WebKit Commit Bot
Comment 5
2016-08-23 12:04:37 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug