[MediaStream] Templatize MediaConstraint https://bugs.webkit.org/show_bug.cgi?id=161092

Reviewed by Jer Noble.

No new tests, no functional change.

* platform/mediastream/MediaConstraints.cpp:
(WebCore::BooleanConstraint::getExact):
(WebCore::BooleanConstraint::getIdeal):
(WebCore::MediaConstraint::getMin): Deleted.
(WebCore::MediaConstraint::getMax): Deleted.
(WebCore::MediaConstraint::getExact): Deleted.
(WebCore::MediaConstraint::getIdeal): Deleted.
(WebCore::IntConstraint::create): Deleted.
(WebCore::IntConstraint::setMin): Deleted.
(WebCore::IntConstraint::setMax): Deleted.
(WebCore::IntConstraint::setExact): Deleted.
(WebCore::IntConstraint::setIdeal): Deleted.
(WebCore::IntConstraint::getMin): Deleted.
(WebCore::IntConstraint::getMax): Deleted.
(WebCore::IntConstraint::getExact): Deleted.
(WebCore::IntConstraint::getIdeal): Deleted.
(WebCore::DoubleConstraint::create): Deleted.
(WebCore::DoubleConstraint::setMin): Deleted.
(WebCore::DoubleConstraint::setMax): Deleted.
(WebCore::DoubleConstraint::setExact): Deleted.
(WebCore::DoubleConstraint::setIdeal): Deleted.
(WebCore::DoubleConstraint::getMin): Deleted.
(WebCore::DoubleConstraint::getMax): Deleted.
(WebCore::DoubleConstraint::getExact): Deleted.
(WebCore::DoubleConstraint::getIdeal): Deleted.
(WebCore::BooleanConstraint::create): Deleted.
(WebCore::BooleanConstraint::setExact): Deleted.
(WebCore::BooleanConstraint::setIdeal): Deleted.
(WebCore::StringConstraint::create): Deleted.
* platform/mediastream/MediaConstraints.h:
(WebCore::MediaConstraint::getMin):
(WebCore::MediaConstraint::getMax):
(WebCore::MediaConstraint::getExact):
(WebCore::MediaConstraint::getIdeal):
(WebCore::NumericConstraint::setMin):
(WebCore::NumericConstraint::setMax):
(WebCore::NumericConstraint::setExact):
(WebCore::NumericConstraint::setIdeal):
(WebCore::NumericConstraint::setHasMin): Deleted.
(WebCore::NumericConstraint::setHasMax): Deleted.
(WebCore::NumericConstraint::setHasExact): Deleted.
(WebCore::NumericConstraint::setHasIdeal): Deleted.
(WebCore::NumericConstraint::hasMin): Deleted.
(WebCore::NumericConstraint::hasMax): Deleted.
(WebCore::NumericConstraint::hasExact): Deleted.
(WebCore::NumericConstraint::hasIdeal): Deleted.


Canonical link: https://commits.webkit.org/179237@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204847 268f45cc-cd09-0410-ab3c-d52691b4dbfc